Test LabGraph Docker

--- a/action.yml
+++ b/action.yml
@@ -6,11 +6,11 @@ inputs:
     description: 'Who to greet'
     required: true
     default: 'World'
-outputs:
-  time: # id of output
-    description: 'The time we greeted you'
+# outputs:
+#   time: # id of output
+#     description: 'The time we greeted you'
 runs:
   using: 'docker'
-  image: 'Dockerfile_test'
+  image: 'Dockerfile'
   args:
     - ${{ inputs.who-to-greet }}
