--- a/action.yml
+++ b/action.yml
@@ -1,16 +1,13 @@
 # action.yml
-name: 'Hello World'
-description: 'Greet someone and record the time'
+name: 'LabGraph Docker (Linux)'
+description: 'LabGraph CI tests using Docker (Linux)'
 inputs:
   who-to-greet:  # id of input
     description: 'Who to greet'
     required: true
     default: 'World'
-# outputs:
-#   time: # id of output
-#     description: 'The time we greeted you'
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'Dockerfile.manylinux'
   args:
     - ${{ inputs.who-to-greet }}
