Test LabGraph Docker Part2.10

--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,6 @@ inputs:
     default: 'World'
 runs:
   using: 'docker'
-  image: 'Dockerfile.manylinux'
+  image: 'Dockerfile'
   args:
     - ${{ inputs.who-to-greet }}
