--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       # To use this repository's private action,
       # you must check out the repository
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Hello world action step
         uses: ./ # Uses an action in the root directory
         id: hello
