--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,13 @@
 on: [push]
 
 jobs:
-  hello_world_job:
+  labgraph_build_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: LabGraph Build Job
     steps:
       # To use this repository's private action,
       # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Hello world action step
+      - name: LabGrah Build step
         uses: ./ # Uses an action in the root directory
-        id: hello
-        with:
-          who-to-greet: 'Mona the Octocat'
