--- a/action.yml
+++ b/action.yml
@@ -3,4 +3,4 @@ name: 'LabGraph Docker (Linux)'
 description: 'LabGraph CI tests using Docker (Linux)'
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'Dockerfile.manylinux'
