--- a/Dockerfile.Ubuntu
+++ b/Dockerfile.Ubuntu
@@ -8,9 +8,11 @@ RUN apt-get update && \
   add-apt-repository ppa:deadsnakes/ppa
 RUN apt-get update
 
-RUN apt-get install -y build-essential python3.6 python3.6-dev python3-pip 
+# For py3.6: RUN apt-get install -y build-essential python3.6 python3.6-dev python3-pip
+RUN apt-get install -y build-essential python3.8 python3-pip
+RUN python3 -m pip install --upgrade pip
 
 RUN export LC_ALL=C.UTF-8
 RUN export LANG=en_US.utf-8
 
-RUN python3.6 -m pip install labgraph
+RUN python3 -m pip install labgraph
