--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -13,22 +13,23 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       min-numpy-version: "1.19.5"
+      min-numpy-hash: "51/60/3f0fe5b7675a461d96b9d6729beecd3532565743278a9c3fe6dd09697fa7"
       CIBW_ARCHS_MACOS: "x86_64 universal2 arm64"
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, windows-latest, macOS-10.15]
+        os: [ubuntu-18.04, windows-latest, macos-10.15]
         cibw_archs: ["auto"]
-		include:
-			- os: ubuntu-18.04
-			  cibw_archs: "aarch64"
+        include: 
+          - os: ubuntu-18.04
+            cibw_archs: "aarch64"
 
     steps:
       - name: Set up QEMU
-          if: matrix.cibw_archs == 'aarch64'
-          uses: docker/setup-qemu-action@v1
-          with:
-            platforms: arm64
+        if: matrix.cibw_archs == 'aarch64'
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: arm64
 
       - uses: actions/checkout@v2
         with:
@@ -44,6 +45,10 @@ jobs:
         with:
           path: numpy-aarch64-cache/
           key: numpy-${{ matrix.cibw_archs }}-cache-${{ env.min-numpy-version }}
+
+      - name: Install cibuildwheel
+        run: |
+          python -m pip install cibuildwheel==2.3.1
 
       - name: Build minimum NumPy for aarch64
         if: matrix.cibw_archs == 'aarch64' && steps.numpy-cache.outputs.cache-hit != 'true'
