--- a/extensions/prototypes/labgraph_monitor/.gitignore
+++ b/extensions/prototypes/labgraph_monitor/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-/public
 
 # testing
 /coverage
@@ -22,3 +21,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+package-lock.json
