--- a/extensions/prototypes/labgraph_monitor/.eslintrc.json
+++ b/extensions/prototypes/labgraph_monitor/.eslintrc.json
@@ -2,7 +2,12 @@
     "extends": ["react-app", "react-app/jest", "prettier"],
     "plugins": ["prettier"],
     "rules": {
-        "prettier/prettier": "warn",
+        "prettier/prettier": [
+            "error",
+            {
+                "endOfLine": "auto"
+            }
+        ],
         "no-console": [
             "warn",
             {
