--- a/extensions/prototypes/labgraph_monitor/package.json
+++ b/extensions/prototypes/labgraph_monitor/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@babel/core": "^7.17.2",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
         "@mui/material": "^5.4.1",
@@ -13,6 +14,7 @@
         "@types/node": "^16.7.13",
         "@types/react": "^17.0.20",
         "@types/react-dom": "^17.0.9",
+        "dagre": "^0.8.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-flow-renderer": "^9.7.4",
@@ -50,6 +52,7 @@
         ]
     },
     "devDependencies": {
+        "@types/dagre": "^0.7.47",
         "@typescript-eslint/eslint-plugin": "^5.11.0",
         "@typescript-eslint/parser": "^5.11.0",
         "eslint": "^8.8.0",
