--- a/extensions/prototypes/labgraph_monitor/package.json
+++ b/extensions/prototypes/labgraph_monitor/package.json
@@ -6,6 +6,7 @@
         "@babel/core": "^7.17.2",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
+        "@mui/icons-material": "^5.4.1",
         "@mui/material": "^5.4.1",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^12.0.0",
