--- a/extensions/prototypes/labgraph_monitor/package.json
+++ b/extensions/prototypes/labgraph_monitor/package.json
@@ -17,11 +17,14 @@
         "@types/node": "^16.7.13",
         "@types/react": "^17.0.20",
         "@types/react-dom": "^17.0.9",
+        "@types/socket.io-client": "^3.0.0",
+        "@types/websocket": "^1.0.5",
         "dagre": "^0.8.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-flow-renderer": "^9.7.4",
         "react-scripts": "5.0.0",
+        "socket.io-client": "^4.4.1",
         "typescript": "^4.4.2",
         "web-vitals": "^2.1.0",
         "websocket": "^1.0.34"
