--- a/extensions/prototypes/labgraph_monitor/package.json
+++ b/extensions/prototypes/labgraph_monitor/package.json
@@ -14,12 +14,14 @@
         "@testing-library/react": "^12.0.0",
         "@testing-library/user-event": "^13.2.1",
         "@types/jest": "^27.0.1",
+        "@types/lodash": "^4.14.178",
         "@types/node": "^16.7.13",
         "@types/react": "^17.0.20",
         "@types/react-dom": "^17.0.9",
         "@types/socket.io-client": "^3.0.0",
         "@types/websocket": "^1.0.5",
         "dagre": "^0.8.5",
+        "lodash": "^4.17.21",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-flow-renderer": "^9.7.4",
