--- a/extensions/prototypes/labgraph_monitor/package.json
+++ b/extensions/prototypes/labgraph_monitor/package.json
@@ -10,6 +10,7 @@
         "@mui/lab": "^5.0.0-alpha.68",
         "@mui/material": "^5.4.1",
         "@mui/styles": "^5.4.1",
+        "@reduxjs/toolkit": "^1.7.2",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^12.0.0",
         "@testing-library/user-event": "^13.2.1",
@@ -25,6 +26,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-flow-renderer": "^9.7.4",
+        "react-redux": "^7.2.6",
         "react-scripts": "5.0.0",
         "socket.io-client": "^4.4.1",
         "typescript": "^4.4.2",
