bennaaym/labgraph_monitor: first unittest added, test Home component

--- a/extensions/prototypes/labgraph_monitor/package.json
+++ b/extensions/prototypes/labgraph_monitor/package.json
@@ -12,9 +12,9 @@
         "@mui/styles": "^5.4.1",
         "@reduxjs/toolkit": "^1.7.2",
         "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^12.0.0",
+        "@testing-library/react": "^12.1.3",
         "@testing-library/user-event": "^13.2.1",
-        "@types/jest": "^27.0.1",
+        "@types/jest": "^27.4.0",
         "@types/lodash": "^4.14.178",
         "@types/node": "^16.7.13",
         "@types/react": "^17.0.20",
@@ -28,6 +28,7 @@
         "react-flow-renderer": "^9.7.4",
         "react-redux": "^7.2.6",
         "react-scripts": "5.0.0",
+        "resize-observer-polyfill": "^1.5.1",
         "socket.io-client": "^4.4.1",
         "typescript": "^4.4.2",
         "web-vitals": "^2.1.0",
