bennaaym/labgraph_monitor: github action updated

--- a/.github/workflows/labgraph_monitor.yml
+++ b/.github/workflows/labgraph_monitor.yml
@@ -19,3 +19,4 @@ jobs:
         run: |
           cd extensions/prototypes/labgraph_monitor
           yarn test --watchAll=false
+          yarn build
