--- a/extensions/prototypes/labgraph_monitor/package.json
+++ b/extensions/prototypes/labgraph_monitor/package.json
@@ -6,6 +6,7 @@
         "@babel/core": "^7.17.2",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
+        "@material/card": "^13.0.0",
         "@mui/icons-material": "^5.4.1",
         "@mui/lab": "^5.0.0-alpha.68",
         "@mui/material": "^5.4.1",
