Fix missing Python setup in pose_vis.yml

--- a/.github/workflows/pose_vis.yml
+++ b/.github/workflows/pose_vis.yml
@@ -2,8 +2,15 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8]
     steps:
       - uses: actions/checkout@v2
+      - name: Python setup ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Install PoseVis
         run: |
           cd devices/webcam
