--- a/tree/main/extensions/speech-gpt-mobile/package.json
+++ b/tree/main/extensions/speech-gpt-mobile/package.json
@@ -6,7 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
+    "heroicons": "^2.0.16",
     "next": "latest",
+    "next-auth": "^4.19.2",
+    "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
