--- a/tree/main/extensions/speech-gpt-mobile/package.json
+++ b/tree/main/extensions/speech-gpt-mobile/package.json
@@ -12,7 +12,8 @@
     "next-auth": "^4.19.2",
     "openai": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
