--- a/tree/main/extensions/speechgpt/package.json
+++ b/tree/main/extensions/speechgpt/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-hot-toast": "^2.4.0"
+    "react-hot-toast": "^2.4.0",
+    "react-select": "^5.7.0",
+    "swr": "^2.0.4"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
