--- a/tree/main/extensions/speechgpt/package.json
+++ b/tree/main/extensions/speechgpt/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
+    "classnames": "^2.3.2",
     "firebase-admin": "^11.5.0",
     "heroicons": "^2.0.16",
     "next": "latest",
