--- a/tree/main/extensions/speechgpt/package.json
+++ b/tree/main/extensions/speechgpt/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.4.0",
     "react-markdown": "^8.0.5",
     "react-select": "^5.7.0",
+    "react-speech-recognition": "^3.10.0",
     "react-syntax-highlighter": "^15.5.0",
     "swr": "^2.0.4"
   },
