--- a/tree/main/extensions/speechgpt/package.json
+++ b/tree/main/extensions/speechgpt/package.json
@@ -28,6 +28,7 @@
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-speech-recognition": "^3.9.1",
     "@types/react-syntax-highlighter": "^15.5.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
