Arranged text and colors

--- a/android/vision/local.properties
+++ b/android/vision/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jul 11 09:02:39 EDT 2023
-sdk.dir=C\:\\Users\\kritg\\AppData\\Local\\Android\\Sdk
+#Tue Aug 01 00:25:21 CDT 2023
+sdk.dir=/Users/christianwalker/Library/Android/sdk
