--- a/android/vision/local.properties
+++ b/android/vision/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Aug 01 00:25:21 CDT 2023
-sdk.dir=/Users/christianwalker/Library/Android/sdk
+sdk.dir=C\:\\Users\\kritg\\AppData\\Local\\Android\\Sdk
