--- a/extensions/surveygpt/package.json
+++ b/extensions/surveygpt/package.json
@@ -34,6 +34,7 @@
     "@types/react-speech-recognition": "^3.9.1",
     "@types/react-syntax-highlighter": "^15.5.6",
     "autoprefixer": "^10.4.12",
+    "dotenv": "^16.3.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
