--- a/.github/workflows/labgraph_audiogen.yml
+++ b/.github/workflows/labgraph_audiogen.yml
@@ -21,6 +21,7 @@ jobs:
                 python -m pip install --upgrade pip
                 pip install -e .
                 pip install pytest
+                sudo apt-get install ffmpeg
 
           - name: Run Tests
             run: |
