--- a/.github/workflows/labgraph_audiogen.yml
+++ b/.github/workflows/labgraph_audiogen.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         cd extensions/labgraph_audiogen 
         python -m pip install --upgrade pip
+        sudo apt-get install ffmpeg
         pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
         pip install --pre xformers
         pip install -e .
