--- a/.github/workflows/labgraph_audiogen.yml
+++ b/.github/workflows/labgraph_audiogen.yml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        cd extensions/labgraph_audiogen 
+        cd extensions/lg_audiogen 
         python -m pip install --upgrade pip
         sudo apt-get install ffmpeg
         pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
@@ -27,5 +27,5 @@ jobs:
 
     - name: Run tests
       run: |
-        cd extensions/labgraph_audiogen
+        cd extensions/lg_audiogen
         pytest -vvv
